// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Component matches snapshot when switched off 1`] = `
<div
  class="sc-bRKDuR bxYZvq"
  data-testid="switch"
>
  <div
    class="sc-hvigdm gwuDWR"
  />
</div>
`;

exports[`Switch Component matches snapshot when switched on 1`] = `
<div
  class="sc-bRKDuR eChSRO"
  data-testid="switch"
>
  <div
    class="sc-hvigdm ikiiMT"
  />
</div>
`;
